18/03/24 : More on Monads and IO

--- a/Haskell/makefile
+++ b/Haskell/makefile
@@ -1,7 +1,19 @@
-all:
-	@ghc ListPadding.hs
-	@./ListPadding
-	@rm ListPadding *.hi *.o
+BIN_DIR := bin
+FILES := $(shell ls)
+OUTFILES := $(FILES:%.hs=$(BIN_DIR)/%)
+
+all: $(OUTFILES)
+	
+
+$(BIN_DIR)/%: %.hs
+	mkdir -p $(BIN_DIR)
+	ghc -o $@ $<
+	mv *.hi $(BIN_DIR)
+	mv *.o $(BIN_DIR)
+
+test:
+	echo $(OBJECTS)
+
 
 clean:
-	rm ListPadding *.hi *.o
+	rm -rf $(BIN_DIR)
