--- a/Haskell/Compiler/makefile
+++ b/Haskell/Compiler/makefile
@@ -1,8 +1,6 @@
 BIN_DIR := bin
 INCLUDE_DIR := include
 
-all: $(OUTFILES)
-
 all: bin/main
 
 run: bin/main
@@ -14,9 +12,16 @@ $(BIN_DIR):
 $(INCLUDE_DIR):
 	mkdir -p $(INCLUDE_DIR)
 	
-bin/main: main.hs Parser.hs $(BIN_DIR) $(INCLUDE_DIR)
+bin/main: main.hs Parser.hs Syntax.hs $(BIN_DIR) $(INCLUDE_DIR)
 	ghc -o bin/main main.hs -hidir $(INCLUDE_DIR) -odir $(BIN_DIR)
 
+bin/calculator: Calculator/Syntax.hs Calculator/Types.hs Calculator/Calc.hs
+	ghc -o bin/calculator Calculator/Calc.hs -hidir $(INCLUDE_DIR) -odir $(BIN_DIR)
+
+calc: bin/calculator
+	./bin/calculator
 
 clean:
 	rm -rf $(BIN_DIR) $(INCLUDE_DIR)
+
+	
