Added variable definition in calculator

--- a/Haskell/Compiler/makefile
+++ b/Haskell/Compiler/makefile
@@ -15,7 +15,7 @@ $(INCLUDE_DIR):
 bin/main: main.hs Parser.hs Syntax.hs $(BIN_DIR) $(INCLUDE_DIR)
 	ghc -o bin/main main.hs -hidir $(INCLUDE_DIR) -odir $(BIN_DIR)
 
-bin/calculator: Calculator/Syntax.hs Calculator/Types.hs Calculator/Calc.hs
+bin/calculator: Calculator/Syntax.hs Calculator/Types.hs Calculator/Calc.hs $(BIN_DIR) $(INCLUDE_DIR)
 	ghc -o bin/calculator Calculator/Calc.hs -hidir $(INCLUDE_DIR) -odir $(BIN_DIR)
 
 calc: bin/calculator
